src/fhiclcpp/fhiclcpp/test/testFiles/fail/hname_fail.fcl
#===========================================
# Testing Incorrect Hierarchical Name Useage
# What's Wrong: No Name Before "."
#===========================================
.a : 5
